# job-applier

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  PLAN.md  README.md  config.yaml  credentials.env.example  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.bat  setup.sh
data/: jobs.db
debug/: linkedin_debug_1775518078.html  linkedin_debug_1775521723.html  linkedin_debug_1775521775.html  linkedin_debug_1775521867.html  linkedin_debug_1775521890.html  linkedin_debug_1775521914.html  linkedin_debug_1775522394.html  linkedin_debug_1775522417.html  linkedin_debug_1775522469.html  linkedin_debug_1775522493.html  linkedin_debug_1775522557.html  linkedin_debug_1775522607.html  linkedin_debug_1775522629.html  linkedin_debug_1775522652.html  linkedin_debug_1775522676.html  linkedin_live.html  linkedin_live2.html
decisions/: response_template.json
src/: __main__.py  applier_cli.py  config.py  main.py  scraper_cli.py
src/ai/: ai_handler.py  ai_overseer.py  client.py  decisions.py  prompts.py
src/api/: apply.py  deps.py  jobs.py  resume.py  scrape.py  settings.py  status.py  tasks.py  ws.py
src/applier/: base.py  generic.py  linkedin.py  workday.py
src/appliers/: base_applier.py  generic_applier.py  linkedin_applier.py  workday_applier.py
src/browser/: browser_manager.py
src/parser/: resume_parser.py
src/queue/: __init__.py  job_queue.py  models.py  store.py
src/resume/: models.py  parser.py
src/scraper/: base.py  dice.py  indeed.py  linkedin.py  monster.py
ui/: index.html  package-lock.json  package.json
(+21 files in other folders)
